cmake_minimum_required(VERSION 3.24)
project(programming_fundamentals_II)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(programming_fundamentals_II challenge25.cpp.cpp)
#add_executable(programming_fundamentals_II "HW Ch 5/lab2a/challenge25.cpp")
add_executable(LAB1 lab1.cpp)
